syntax = "proto3";

import "OperationResponse.proto";
import "SumRequest.proto";

service SumOperationService {
	rpc Calculate(stream SumRequest) returns (stream OperationResponse);
}