syntax = "proto3";

message SumRequest
{
	int32 FirstOperand = 1;
	int32 SecondOperand = 2;
}